new order modal: chosen product added to order (displayed)

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -376,36 +376,27 @@
 			<br>
 		    <h4>New order</h4>
 			<br>
-			<h5>select product</h5>
-				<div class="btn-group" style="width:80%; float:center;">
-					<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    products <i style="font-size:24px" class="fa">&#xf0dd;</i>
-					</button>
-					<div class="dropdown-menu" id="new-order-dropdown-menu">
-					    <hr>
-					</div>
-				</div>
+			<span>
 			
+			</span>
+			<h5>select product</h5>
+			<div class="btn-group" style="width:80%; float:center;">
+				<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    products <i style="font-size:24px" class="fa">&#xf0dd;</i>
+				</button>
+				<!-- this is where we add product options to -->
+				<div class="dropdown-menu" id="new-order-dropdown-menu">
+				    <hr>
+				</div>
+			</div>
 			<br>
 			
 
 			<form id="new-order-form">
-				  <div class="row">
-				    <div class="col">
-				      <input type="text" class="form-control" id="email" placeholder=" " name="email">
-				    </div>
-				    <div class="col">
-				      <input type="password" class="form-control" placeholder=" " name="pswd">
-				    </div>
-				    <div class="col">
-				      <input type="password" class="form-control" placeholder=" " name="pswd">
-				    </div>
-				  	<div class="col">
-				      <input type="password" class="form-control" placeholder=" " name="pswd">
-				    </div>
-				  </div>
 			</form>
 			<br>
+			
+			<button type="button" style="width:80%" class="btn btn-danger "></button>
 	  	</div>
 	</div>
 	<!-- /Modal new Order -->
