chsen product added to list, in new order. need to work on UI design

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -376,27 +376,27 @@
 			<br>
 		    <h4>New order</h4>
 			<br>
-			<span>
-			
-			</span>
-			<h5>select product</h5>
+
 			<div class="btn-group" style="width:80%; float:center;">
 				<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				    products <i style="font-size:24px" class="fa">&#xf0dd;</i>
 				</button>
 				<!-- this is where we add product options to -->
 				<div class="dropdown-menu" id="new-order-dropdown-menu">
+					<h6>type in length and color</h6>
 				    <hr>
+				    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1"></ul>
 				</div>
 			</div>
 			<br>
 			
 
 			<form id="new-order-form">
+				<label>selected products</label>
 			</form>
 			<br>
 			
-			<button type="button" style="width:80%" class="btn btn-danger "></button>
+			<button type="button" style="width:80%" class="btn btn-danger ">close and send</button>
 	  	</div>
 	</div>
 	<!-- /Modal new Order -->
