added product 'remove' function idetifies correct product

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -379,7 +379,7 @@
 
 			<div class="btn-group" style="width:80%; float:center;">
 				<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				    products <i style="font-size:24px" class="fa">&#xf0dd;</i>
+				    add products <i style="font-size:24px" class="fa">&#xf0dd;</i>
 				</button>
 				<!-- this is where we add product options to -->
 				<div class="dropdown-menu" id="new-order-dropdown-menu">
@@ -396,7 +396,7 @@
 			</form>
 			<br>
 			
-			<button type="button" style="width:80%" class="btn btn-danger ">close and send</button>
+			<button type="button" class="btn btn-danger" onclick="sendNewOrder()">close and send</button>
 	  	</div>
 	</div>
 	<!-- /Modal new Order -->
