--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   	<link rel="icon" type="image/png" href="resources/lumber-icon-64.png">
-  	
   	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   
@@ -185,7 +184,7 @@
 	<br>
 	<br>
 	<img alt="" src="resources/order-icon.png" class="messages-icon">
-	<h3 style="display:inline;color:#1F618D"> Orders</h3><a href="#Comment-Modal" onclick="openOrderModal()"> new</a> 	
+	<h3 style="display:inline;color:#1F618D"> Orders</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#new-order-Modal"> new</a> 	
 	<div class="container">
 		<table class="Table">
 			<thead>
@@ -369,35 +368,68 @@
 	</div>
 	<!-- Modal user(send message) -->
 	
-	<!-- Modal new Order -->
-	<div id="new-order-Modal" class="modal">
-		<div class="modal-content" id="new-order-modal-content">
-			<button type="submit" class="btn btn-primary mt-3" style="float:right;" onclick="closeNewOrder()">&times;</button>
-			<br>
-		    <h4>New order</h4>
-			<br>
 
-			<div class="btn-group" style="width:80%; float:center;">
-				<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				    add products <i style="font-size:24px" class="fa">&#xf0dd;</i>
-				</button>
-				<!-- this is where we add product options to -->
-				<div class="dropdown-menu" id="new-order-dropdown-menu">
-					<h6>type in length and color</h6>
-				    <hr>
-				    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1"></ul>
+	<!-- new Order Modal (v2) -->
+	<div class="modal fade" id="new-order-Modal" tabindex="-1" role="dialog" aria-labelledby="new-order-ModalTitle" aria-hidden="true">
+	  <div class="modal-dialog modal-dialog-scrollable" role="document">
+	    <div class="modal-content">
+	    	<button type="submit"  data-dismiss="modal" style="float:right;" onclick="closeNewOrder()">&times;</button>
+	      	<div class="modal-header">
+	        	<h5 class="modal-title" id="new-order-ModalTitle">New order</h5>
+	      	</div>
+	    	<div class="modal-body">
+				<div class="btn-group" style="width:80%; float:center;">
+					<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					add products <i style="font-size:24px" class="fa">&#xf0dd;</i>
+					</button>
+					<!-- this is where we add product options to -->
+						<div class="dropdown-menu" id="new-order-dropdown-menu">
+							<h6>type in length and color</h6>
+						    <hr>
+						    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1"></ul>
+						</div>
 				</div>
-			</div>
-			<br>
-			
+	      	</div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary">Save changes</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	
+	<!-- Modal new Order -->
+	<div id="new-order-Modal" class="modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-dialog-scrollable" role="document">
+			<div class="modal-content" id="new-order-modal-content">
+				<button type="submit" class="btn btn-primary mt-3" style="float:right;" onclick="closeNewOrder()">&times;</button>
+				<br>
+			    <h4>New order</h4>
+				<br>
+	
+				<div class="btn-group" style="width:80%; float:center;">
+					<button type="button" style="width:80%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    add products <i style="font-size:24px" class="fa">&#xf0dd;</i>
+					</button>
+					<!-- this is where we add product options to -->
+					<div class="dropdown-menu" id="new-order-dropdown-menu">
+						<h6>type in length and color</h6>
+					    <hr>
+					    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1"></ul>
+					</div>
+				</div>
+				<br>
+				
+	
+				<form id="new-order-form">
+					<label>selected products</label>
+				</form>
+				<br>
+				
+				<button type="button" class="btn btn-danger" onclick="sendNewOrder()">close and send</button>
+		  	</div>
+		</div>
 
-			<form id="new-order-form">
-				<label>selected products</label>
-			</form>
-			<br>
-			
-			<button type="button" class="btn btn-danger" onclick="sendNewOrder()">close and send</button>
-	  	</div>
 	</div>
 	<!-- /Modal new Order -->
 
