--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -403,7 +403,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Send</button>
+					<button type="button" class="btn btn-primary" onclick="sendNewOrder()">Send</button>
 				</div>
 			</div>
 		</div>
