chosen product added to cart with length and color

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -384,7 +384,7 @@
 					<h4 class="modal-title">New Order</h4>
 				</div>
 				<div class="modal-body">
-					 <div class="btn-group" style="width:100%; float:center;">
+					<div class="btn-group" style="width:100%; float:center;">
 						<button type="button" style="width:100%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							add products <i style="font-size:24px" class="fa">&#xf0dd;</i>
 						</button>
@@ -392,7 +392,7 @@
 						<div class="dropdown-menu" style="width:100%;" id="new-order-dropdown-menu">
 							<h6>type in length and color</h6>
 						    <hr>
-						    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1"></ul>
+						    <ul class="dropdown-menu" id="new-order-dropdown" aria-labelledby="dropdownMenu1"></ul>
 						</div>
 					</div>
 					
