--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -384,6 +384,16 @@
 					<h4 class="modal-title">New Order</h4>
 				</div>
 				<div class="modal-body">
+					<div class="block">
+					    <label>shipping address</label>
+					    <input type="text" id="shipping-address"/>
+					</div>
+					<hr>
+					<div class="block">
+					    <label>comment</label>
+					    <input type="text" id="shipping-comment"/>
+					</div>
+					<br>
 					<div class="btn-group" style="width:100%; float:center;">
 						<button type="button" style="width:100%" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							add products <i style="font-size:24px" class="fa">&#xf0dd;</i>
@@ -400,6 +410,12 @@
 						<label>selected products</label>
 					</form>
 					<br>
+					<hr>
+					<div class="block">
+					    <label>total for order:</label>
+					    <label  id="order-total">100.0</label>
+					</div>
+					
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
