--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -370,7 +370,7 @@
 	<!-- Modal user(send message) -->
 	
  
-	<!-- Modal -->
+	<!-- Modal new order -->
 	<div class="modal fade" id="new-order-Modal1" role="dialog">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content" style="width:100%;">
@@ -414,7 +414,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary" onclick="sendNewOrder()">Send</button>
+					<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="sendNewOrder()">Send</button>
 				</div>
 			</div>
 		</div>
