user orders date and total field shows correctly

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -196,11 +196,11 @@
 				<th>supplied</th>
 			</tr>
 			</thead>
-			<tbody>
+			<tbody id="order-table">
 				<tr>
 					<td>23354</td>
 					<td>Tue 16.02.2021 12:32.233</td>
-					<td>&#8362; 25.95</td>
+					<td><i>&#8362;</i> 25.95</td>
 					<td>yes</td>
 				</tr>      
 			</tbody>
@@ -272,6 +272,8 @@
 		</form>	
 	</div>	
 	<!-- / end of write messages -->
+	
+	
 	
 	
 	<!-- personal detail --> 
