--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -60,19 +60,21 @@
 		<div class="container-fluid">
 			<div class="main body">
 			<!-- Main component for a primary marketing message or call to action -->
-				<div class="jumbotron text-center">
+				<!--div class="jumbotron text-center">
 					<h1>Navbar example</h1>
 					<p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
 					<p>To see the difference between static and fixed top navbars, just scroll.</p>
 					<p id="test-images">
 					  <a class="btn btn-lg btn-primary" href="#" role="button" onclick="testMessages()">Test Messages WS</a>
 					</p>
-				</div>
+				</div -->
 			</div>
 		</div> <!-- /container -->
 	</div>
 
 	<!-- products -->
+	<br>
+	<br>
 	<p><img alt="" src="resources/product-icon.png" class="messages-icon">
 		<h3 style="display:inline;color:#1F618D">Products(<span id="number-of-products">3</span>)</h3>
 		<a href="#" onclick="showAddProduct()"> new</a>
@@ -196,13 +198,7 @@
 				<th>supplied</th>
 			</tr>
 			</thead>
-			<tbody id="order-table">
-				<tr>
-					<td>23354</td>
-					<td>Tue 16.02.2021 12:32.233</td>
-					<td><i>&#8362;</i> 25.95</td>
-					<td>yes</td>
-				</tr>      
+			<tbody id="order-table">    
 			</tbody>
 		</table>
 	</div>
