--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -429,7 +429,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="sendNewOrder()">Send</button>
+					<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="sendOrder()">Send</button>
 				</div>
 			</div>
 		</div>
@@ -447,7 +447,12 @@
 				</div>
 				<div class="modal-body">
 					<div class="block">
-					    <label>from</label>
+					    <label>customer</label>
+					    <input type="text" id="user-order-customer" disabled />
+					</div>
+					<hr>
+					<div class="block">
+					    <label>date</label>
 					    <input type="text" id="user-order-date" disabled />
 					</div>
 					<hr>
@@ -473,7 +478,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" id="order-edit-btn" class="btn btn-success" style="display:none; float:left;" onclick="editOrder()">edit</button>
-					<button type="button" id="order-update-btn" class="btn btn-danger" data-dismiss="modal" style="display:none;" onclick="updateOrder(this)">update</button>
+					<button type="button" id="order-update-btn" class="btn btn-danger" data-dismiss="modal" style="display:none;" onclick="updateOrder()">update</button>
 				</div>
 			</div>
 		</div>
