some changes to index.html footer

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -457,9 +457,8 @@
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
   <p>final project fall 2021 
-  	<a href="#" title="Visit w3schools">www.w3schools.com</a>
-  	
-  	<img src="resources/project-management.png" alt="">
+  	<a href="#" title="Visit w3schools">www.w3schools.com</a> 	
+  	<img src="resources/project-management.png" alt="" class="icon-thumbnail">
   </p>
 </footer>
 
