--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -427,7 +427,17 @@
       <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
       <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
     </div>
-    <div class="col-sm-7 slideanim">
+    <div class="col-sm-7 slideanim"> 
+        <div>
+            <!-- Google Map Copied Code -->
+			<iframe 
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3355.1620614443523!2d35.01732435104427!3d32.76143409199296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151dbab83f7be8ab%3A0x475fdbcf84359ab8!2sUniversity%20of%20Haifa!5e0!3m2!1sen!2sil!4v1628590546027!5m2!1sen!2sil" 
+			width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+			</iframe>
+
+            
+        </div>
+    
       <div class="row">
         <div class="col-sm-6 form-group">
           <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
