some changes to index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/style2.css" />
+  <link rel="icon" type="image/png" href="resources/lumber-icon-64.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   
@@ -73,7 +74,7 @@
 				<!-- Icon -->
 				<div class="fadeIn first">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+					<img src="resources/login-icon.png" id="icon" alt="User Icon" />
 				</div>
 			
 			  	<!-- Login Form -->
@@ -105,7 +106,7 @@
 	    		<!-- Tabs Titles -->
 				    <!-- Icon -->
 				    <div class="fadeIn first">
-				      <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+				      <img src="resources/register-icon-22.jpg" id="icon" alt="User Icon" />
 				      <button type="button" class="close" data-dismiss="modal">&times;</button>
 				    </div>
 	
@@ -348,7 +349,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
 
 
         <div class="row slideanim">
@@ -473,7 +474,7 @@
 </footer>
 
 
-
+<!-- 
 <script>
 $(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
@@ -533,6 +534,7 @@ function change_page_to_login_test(){
 	} 
 
 </script>
+ -->
 
 </body>
 </html>
