added cross section to products

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 </head>
 
 	
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" onload="onBodyLoad(this)">
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" >
 
 
 	
@@ -294,9 +294,9 @@
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Haifa, IL</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +972-04-8240111</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> contact@haifa.ac.il.com</p>
     </div>
     <div class="col-sm-7 slideanim"> 
         <div>
@@ -338,7 +338,7 @@
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
   <p>final project fall 2021 
-  	<a href="#" title="Visit w3schools">www.w3schools.com</a> 	
+  	<!-- a href="#" title="Visit w3schools">www.w3schools.com</a --> 	
   	<img src="resources/project-management.png" alt="" class="icon-thumbnail">
   </p>
 </footer>
