added cross section to user page products display

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -37,6 +37,7 @@
 		
 			<div class="col-sm-5" align="center" >
 				<ul class="nav navbar-nav" id="nav-bar-items">
+					<li><a href="#products">Products</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#orders">Orders</a></li>
 					<li><a href="#messages">Messages</a></li>
@@ -88,6 +89,7 @@
 				<tr>
 					<th>catalog number</th>
 					<th>type</th>
+					<th>cross section</th>
 					<th>price</th>
 					<th>length</th>
 					<th>color</th>
