added smooth scroling to user page

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body onload="">
+<body onload="" id="userPage" data-target=".navbar" data-offset="100">
 
 <!-- navigation bar -->
 <div class="container">
@@ -112,7 +112,7 @@
 	<p><img alt="" src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a>
 	<p></p>
 	<div class="row gutters-sm">	
-		<div class="container">
+		<div class="container" id="projects">
 			<table class="table table-striped table-dark" >	
 				<tbody>
 					<tr>
@@ -203,7 +203,7 @@
 	<br>
 	<img alt="" src="resources/order-icon.png" class="messages-icon">
 	<h3 style="display:inline;color:#1F618D"> Orders</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#new-order-Modal1" onclick="openOrderModal()"> new</a> 	
-	<div class="container">
+	<div class="container" id="orders">
 		<table class="Table">
 			<thead>
 			<tr>
