--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 </head>
 
 	
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" >
+<body id="myPage" data-spy="scroll"   >
 
 
 	
